# mlflow-tracking-with-minio

./: .gitignore  Makefile  README.md  config.env  docker-compose.yml  main.py  pyproject.toml
notebooks/: mnist_load_from_registry.py  mnist_predict_from_inference.py  mnist_training.py
